# windfnd

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  br.sh
include/: forecast.h  render.h  util.h  weather_api.h
src/: forecast.cpp  main.cpp  render.cpp  weather_api.cpp
test/: BUILD.bazel  test_forecast.cpp  test_util.cpp  test_weather_api.cpp
test/aux/: search_location.json  test.json
